added text to cards, some styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="order_lunch">Lunch</string>
+	<string name="menu_navigation">Navigation</string>
+	<string name="menu_repairs">Repair Request</string>
+	<string name="menu_security">Security</string>
+	<string name="menu_schedule">Schedule</string>
 </resources>
