--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
 	<string name="menu_security">Security</string>
 	<string name="menu_schedule">Schedule</string>
     <string name="more_info_associations">MORE</string>
+	<string name="study_associations">Study Associations</string>
 </resources>
