--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
-    <string name="app_name">HCI Prototype</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="order_lunch">Lunch</string>
+	<string name="app_name">HCI Prototype</string>
+	<string name="title_home">Home</string>
+	<string name="title_dashboard">Dashboard</string>
+	<string name="title_notifications">Notifications</string>
+	<string name="order_lunch">Lunch</string>
 	<string name="menu_navigation">Navigation</string>
 	<string name="menu_repairs">Repair Request</string>
 	<string name="menu_security">Security</string>
 	<string name="menu_schedule">Schedule</string>
-    <string name="more_info_associations">MORE</string>
+	<string name="more_info_associations">MORE</string>
 	<string name="study_associations">Study Associations</string>
 	<string name="back_to_home">Back to Home</string>
 	<string name="title_activity_security">SecurityActivity</string>
@@ -23,4 +23,5 @@
 	<string name="call_security">Call Security</string>
 	<string name="call_campus_security">Call Campus Security</string>
 	<string name="call_security_description">Click this button to call Campus Security. They will be able to track your location for an hour</string>
+	<string name="click_here_to_call">CLICK HERE TO CALL</string>
 </resources>
