--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_aaaaaaa">aaaaaaa</string>
-    <string name="tab_current_repairs">Current Requests</string>
+    <string name="tab_current_repairs">Accepted Requests</string>
     <string name="tab_your_repairs">Your Requests</string>
     <string name="title_activity_repair">RepairActivity</string>
 	<string name="order_lunch">Lunch</string>
